# modele-prevision-meteo

./: CMakeLists.txt  Docker-compose.yaml  Dockerfile  README.md  config.yaml  requirements.txt
include/: advection.h  boundary.h  diffusion.h  grid.h  io.h  parallel.h
output/: output_step_0000.csv  output_step_0010.csv  output_step_0020.csv  output_step_0030.csv  output_step_0040.csv  output_step_0050.csv  output_step_0060.csv  output_step_0070.csv  output_step_0080.csv  output_step_0090.csv
python/: animate.py  visualize.py
src/: advection.c  boundary.c  diffusion.c  grid.c  io.c  main.c  parallel.c
tests/: test_advection.c  test_diffusion.c
